# swflib

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  meson.build  vcpkg.json
.github/workflows/: CI.yml
cmake/: swflibConfig.cmake.in
docker/: Dockerfile.alpine  Dockerfile.debian
include/: bitstream.h  bitstream.hpp  errors.h  stream.h  swflib.h  swflib.hpp
include/abc/: AbcFile.h  AbcFile.hpp  common.h  common.hpp
include/abc/info/: Class.h  Class.hpp  ConstantPool.h  ConstantPool.hpp  Exception.h  Exception.hpp  Metadata.hpp  Method.h  Method.hpp  Multiname.h  Multiname.hpp  Namespace.h  Namespace.hpp  Script.h  Script.hpp  Trait.h  Trait.hpp
include/abc/parser/: Instruction.h  Instruction.hpp  Parser.h  Parser.hpp  Program.h  Program.hpp  opcodes.h
include/swf/: datatypes.h  datatypes.hpp  swf.h  swf.hpp
include/swf/tags/: DefineBinaryDataTag.h  DefineBinaryDataTag.hpp  DoABCTag.h  DoABCTag.hpp  EndTag.h  EndTag.hpp  FileAttributesTag.h  FileAttributesTag.hpp  MetadataTag.h  MetadataTag.hpp  ProductInfoTag.h  ProductInfoTag.hpp  ScriptLimitsTag.h  ScriptLimitsTag.hpp  SetBackgroundColorTag.h  SetBackgroundColorTag.hpp  SymbolClassTag.h  SymbolClassTag.hpp  Tag.h  Tag.hpp  UnknownTag.h  UnknownTag.hpp  tags.h  tags.hpp
lib/: CMakeLists.txt  bitstream.cpp  meson.build  stream.cpp
lib/abc/: CMakeLists.txt
lib/abc/inc/: parse.h  parse.hpp
lib/abc/src/: AbcFile.cpp  CMakeLists.txt  meson.build
lib/abc/src/info/: CMakeLists.txt  Class.cpp  ConstantPool.cpp  Exception.cpp  Metadata.cpp  Method.cpp  Multiname.cpp  Namespace.cpp  Script.cpp  Trait.cpp  meson.build
lib/abc/src/parser/: CMakeLists.txt  Instruction.cpp  Parser.cpp  Program.cpp  meson.build  parse.cpp
lib/py/: CMakeLists.txt
lib/py/inc/: modules.h  modules.hpp
lib/py/src/: abc.cpp  stream.cpp  swf.cpp  swflib.cpp  tags.cpp
lib/swf/: CMakeLists.txt
lib/swf/src/: CMakeLists.txt  datatypes.cpp  meson.build  swf.cpp
lib/swf/src/tags/: CMakeLists.txt  DefineBinaryDataTag.cpp  DoABCTag.cpp  EndTag.cpp  FileAttributesTag.cpp  MetadataTag.cpp  ProductInfoTag.cpp  ScriptLimitsTag.cpp  SetBackgroundColorTag.cpp  SymbolClassTag.cpp  UnknownTag.cpp  meson.build
tests/: 1.swf  CMakeLists.txt  test.h  test_abc.cpp  test_abcexport.cpp  test_bitstream.cpp  test_parser.cpp  test_stream.cpp  test_swf.cpp
